--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -8,6 +8,7 @@
 
 %- - - - - - - - - 
 \subsection{Bilder}
+\label{picture_sources}
  
  Alle Bilder, die als Eingabe für die PCA verwendet wurden, sind in Abbildung \ref{all_images} zu finden. Im Folgenden sind die Bildquellen aufgezählt.
  Alle Tiere, die nicht aufgezählt sind, sind aus \cite{Spezielle_Zoologie} entnommen.
