--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -7,7 +7,7 @@ Idee und Ziel
 \begin{itemize}
  \item Theorie + Implementierung
  \item prozedurale Generierung
- \item Es gibt schon Pflanzen, Landschaften, Wolken \etc aber keine Tiere
+ \item Es gibt schon Pflanzen, Landschaften, Wolken \etc aber wenig zu Tieren
  \item viele verschiedene (und möglicherweise doch ähnliche) Tiere generieren für Spiel/Film
  \item Inspiration für Künstler, 3D-Animation
     \begin{itemize}
