Replace commas in math mode for decimal numbers by german commas {,}

--- a/latex/basics.tex
+++ b/latex/basics.tex
@@ -116,7 +116,7 @@ Das empirische $\frac{i}{n}$-Quantil der Stichprobe ist $x_{(i)}$, da $i$ Werte 
 Trägt man nun die sortierte Stichprobe gegen die entsprechenden Quantile in ein Diagramm ab, und die angenommene Verteilung ist korrekt, so liegen die Punkte annähernd auf einer Geraden mit Steigung $1$ durch den Ursprung. \cite[Kapitel 1 und 2]{QQPlots}
 
 Den Werten $x_{(i)}$ einfach das $\frac{i}{n}$-Quantil zuzuordnen ist aber insofern schwierig, als dass es suggeriert, dass alle Werte, die mit der angenommenen Verteilung generiert werden, kleiner als $x_{(n)}$ sind. Deshalb gibt es verschiedene andere Möglichkeiten die Quantile zuzuordnen. Sie liefern aber für $n \rightarrow \infty$ alle das gleiche Ergebnis. Sogenannte "`Rankit Plots"' verwenden folgende Zuordnung:
-\[ x_{(i)} \approx F^{-1}\left(\frac{i - 0,5}{n}\right). \]
+\[ x_{(i)} \approx F^{-1}\left(\frac{i - 0{,}5}{n}\right). \]
 Diese Zuordnung wird auch in dieser Arbeit verwendet.
 
 
