--- a/latex/bibliography.bib
+++ b/latex/bibliography.bib
@@ -6,6 +6,18 @@
  urldate = {2020-05-20}
 }
 
+@online{JavaView,
+ title = {JavaView},
+ url = {http://www.javaview.de/},
+ urldate = {2020-05-25}
+}
+
+@online{JavaSerialization,
+ title = {Java Serializable Interface},
+ url = {https://docs.oracle.com/javase/7/docs/api/java/io/Serializable.html},
+ urldate = {2020-05-25}
+}
+
 @article{ArcLengthParametrization,
  author = {Wang, Hongling and Kearney, Joseph and Atkinson, Kendall},
  year = {2002},
