--- a/latex/future_work.tex
+++ b/latex/future_work.tex
@@ -10,6 +10,8 @@
  \item mehr Daten für PCA sammeln
  \item Gewicht in Algo verwenden
  \item Erweiterung auf Mensch? Mensch auch als PCA Datenpunkt?
+ \item Interaktivität: Teile, die einem nicht gefallen, sollten geändert werden können
+ \item Eine Anwendung, bei der nach Eingabe von Parametern sofort das komplette Tier generiert wird, ist weniger hilfreich als eine, bei der schrittweise Teile davon generiert werden können (und auch rückgängig gemacht werden können)
 \end{itemize}
 
 
