--- a/latex/skeleton_generation.tex
+++ b/latex/skeleton_generation.tex
@@ -186,7 +186,7 @@ Als Grundlage für diese Entscheidungen dient der vorher, auf Grundlage der PCA,
 \end{itemize}
 
 
-%-----------------------------------------------
+%---------------------
 \section{Extremitäten}
 \label{section:extremity_generation}
 
@@ -347,8 +347,9 @@ Ein fertig generiertes Skelett wird höchstwahrscheinlich auch noch weiterverarb
 % Beinalgo nicht weiter anpassen
 Die von dem hier beschriebenen Algorithmus generierte Position kann also gut als erster Eindruck dienen muss aber in den meisten Fällen noch angepasst werden. Ausgehend von der gegebenen Datenlagen und von den zu erwartenden Anwendungen ist es aber nicht sinnvoll den Algorithmus weiter zu verfeinern.
 
-%--------------------------------------
+%-----------------------------------------------------
 \subsection{Zusätzliche Ansatzpunkte für Extremitäten}
+\label{additional_extremities}
 
 Ansatzpunkte für Extremitäten sind zunächst der Hüftgürtel und der Schultergürtel. Um auch die Generierung fantastischer Tiere (siehe Abschnitt \ref{biology_mythology}) zu ermöglichen, ist es aber möglich dies zu erweitern. Um die Anzahl der zusätzlichen Extremitäten zu bestimmen, ist es am einfachsten sich auf Benutzereingaben zu verlassen. Die Beispieldaten für die PCA sind nur echte Wirbeltierskelette. Deshalb lassen sich aus Punkten im PCA-Raum keine Informationen zu zusätzlichen Extremitäten ableiten.
 
